tests/expectations/compiler/libraries/lib_submodule_wrong_arg_count_fail.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:5:16
     |
   5 |         return math_lib::ops::add(1u32);  // missing second argument
     |                ^^^^^^^^^^^^^^^^^^^^^^^^
